# race-tracking

./: .gitignore  .gitmodules  README.md  main.py
Checkpoint/: .gitignore  BUILDING_AND_FLASHING.md  CONNECTION_FEATHER.md  LISTENING_TO_FEATHER.md  prj.conf
Checkpoint/DOCUMENTATION/: CODE_STRUCTURE.md  CONFIGURING_PROJECT.md  CONNECTING_THE_FEATHER.md  SETUP.md
Checkpoint/app/: CMakeLists.txt  Kconfig  crt_to_header.py  log-2024-04-25T15:12:06.567776+02:00.txt  log-2024-04-25T15:43:02.965123+02:00.txt  log-2024-04-25T15:44:37.030511+02:00.txt  log-2024-04-25T15:47:52.735176+02:00.txt  log-2024-04-25T15:57:11.210775+02:00.txt  log-2024-04-25T16:00:30.492878+02:00.txt  log-2024-04-25T16:02:20.172978+02:00.txt  log-2024-04-25T16:08:06.385518+02:00.txt  log-2024-04-25T16:15:01.123969+02:00.txt  log-2024-04-25T16:17:54.905601+02:00.txt  log-2024-04-25T16:19:41.430237+02:00.txt  log-2024-04-25T16:26:51.952021+02:00.txt  log-2024-04-25T16:31:20.239625+02:00.txt  log-2024-04-25T16:55:20.075926+02:00.txt  log-2024-04-25T17:20:08.528350+02:00.txt  log-2024-04-25T17:27:48.047681+02:00.txt  (+17 more)
nrf52/: .gitignore  CMakeLists.txt  circuitdojo_feather_nrf9160.overlay  nrf52dk_nrf52832.overlay  prj.conf
radbak/: .gitignore  README.md  docker-compose.devcontainer.yml  docker-compose.yml
radbak/python-src/: README.md  pyproject.toml  scripts.py
radbak/python-src/api/: README.md  db.py  deps.py  main.py  routes.py  settings.py
radbak/python-src/api/socket/: router.py  service.py
radbak/python-src/fwdservice/: fwdservice.py  readme.md
radbak/python-src/tests/: test_main.py
(+78 files in other folders)
